--- a/index.html
+++ b/index.html
@@ -5,20 +5,38 @@
  <meta charset="utf-8">
  <title> Receta tipica peruana </title>
 
-</head>
- <body>
+<link rel="stylesheet" href="css/estilos.css">
 
-<h1 style="text-aling:center;" style="color:red"> RECETA PERUANA </h1>
-<h2 style="color:blue"> Ceviche de Pescado</h2>
-<img src="imagenes/cevicheperuano.jpg" alt="Ceviche">
+</head>
+ <body style="background-color:#FFECB3">
+   <a href="https://marceline24.github.io/marceline-style/" target="_blank" title="hacer click"><img src="imagenes/google.png" alt="imagen google"></a>
+   <br>
+   <a href="contactos.html" target="_blank">contactos</a>
+  <br>
+
+   <a href="mailto:sol240618@gmail.com" > enviar mail</a>
+
+<h1 style="text-align:center;font-size:300% ; background-color: black;"> <b class="ROJO"> RECE</b><b class="BLANCO">TA  PERU</b> <b class="ROJO">ANA</b> </h1>
+<h2 style="text-align:center;font-size:175%;text-decoration:underline" class="subtitulo"> CEVICHE DE PESCADO</h2>
+<br>
+
+<div align="center">
+
+ <img src="imagenes/cevicheperuano.jpg" alt="Ceviche" width="400" height="400">
+
+
 <br>
 <audio src="audio/audio.mp3" controls>
-</audio>
+</audio></div>
+<br>
+  <b>
+<h3 class="contenido" style="text-decoration:underline">ingredientes:</h3>
 
-<h3>ingredientes</h3>
-<p>para 4 personas</p>
+<p>para 4 personas.</p>
 
-<ul>
+<ul class="colormorado" style="background-color:white">
+
+
   <li>1kg Pescado</li>
 <li>medio kilo de limon</li>
   <li>3 dientes de ajos</li>
@@ -27,29 +45,34 @@
   <li>pimienta</li>
   <li>aji limo</li>
 
+
 </ul
 
-<h3>preparacion</h3>
-<ol>
-  <li>cortar el pescado en cuadritos de 3cm y dejarlo en la heladera</li>
+<p>preparacion:</p>
+
+<ol class="colormorado"style="background-color:white">
+
+  <li >cortar el pescado en cuadritos de 3cm y dejarlo en la heladera</li>
   <li>exprimir los limones</li>
   <li>licuar los tallos de apio y cilantro, ajo, jenjibre y el aji limo</li>
   <li>sacar el pescado y mezclar en un recipiente hondo </li>
   <li>agregar lo que licuamos anteriormente,el jugo de limon, sal y pimieta al gusto </li>
   <li> servimos en un plato acompañando con batata y canchita (maiz frito) y listo, a comer !! </li>
+</b>
 
 </ol>
 
 <br>
+<div align="center">
+<video src="./video/ceviche.mp4" controls poster="posterimage.jpg">
 
-<iframe width="560" height="315" src="https://www.youtube.com/embed/djPYS1sKvSo" title="YouTube video player" frameborder="0"
- allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+</video>
 
 <br>
 
 
 <br>
 <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d499487.6353884561!2d-77.26797460823914!3d-12.026498676634573!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9105c5f619ee3ec7%3A0x14206cb9cc452e4a!2zTGltYSwgUGVyw7o!5e0!3m2!1ses!2sar!4v1630953382029!5m2!1ses!2sar"
- width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+ width="600" height="450" style="border:25;" allowfullscreen="" loading="lazy"></iframe></div>
 </body>
 </html>
